tests/errors/assertion.ensureWithCustomMessage.art
ensure.that: "Wrong calc" -> 0 = 1 - 1
ensure.that: "Wrong calc" -> 0 = 1 + 1
